# ReaktorEnginePre-Alpha

./: .gitignore  CMakeCache.txt  CMakeLists.txt  GenerateProject.bat  GenerateProject.sh  LICENSE.txt  Makefile  Readme.md  buid.bat  build.sh  cmake_install.cmake
src/Editor/: Box2DTest.h  CMakeLists.txt  Console.cpp  Console.h  DemoMenu.cpp  DemoMenu.h  Main.cpp  Main.h  Main0.cpp  Makefile  Screen.cpp  Screen.h  Test.cpp  Test.h  ViewPoint.cpp  ViewPoint.h  cmake_install.cmake  filesystem.cpp  model.cpp
src/Editor/Core/: AAScreen.cpp  Console.cpp  Editor.cpp  Editor.h  Game.cpp  Hierachy.cpp  Hierachy.h  Inspector.hpp  MonoHelp.cpp  MonoHelp.h  Profiler.hpp  Project.cpp  Project.h  Screen.cpp  Screen.h  Selection.cpp  Selection.hpp  TextEditor.cpp  ViewPoint.h
src/Editor/Demo/: Box2DTest.h  DemoBox2d.cpp  DemoBox2d.h  DemoModel.cpp  DemoModel.h  DemoTest.cpp  DemoTest.h  DemoTriangle.cpp  DemoTriangle.h  Demo_Box2d.h  Demo_Model.h  Demo_box2d.cpp  Demo_box2d.h  Tiles.cpp  Tiles.h  demo.h  farmbuffer.cpp
src/Editor/Module/DLLProject/: CSharpDLL.csproj  CSharpDLL.sln  Tests.cs  premake5.lua
src/Editor/UI/: BluePrint.cpp  BluePrint.hpp  CodeEditor.cpp  CodeEditor.h  CodeEditor.hpp  Console.cpp  Console.h  Console.hpp  DragDrop.h  FileDialog.cpp  Game.cpp  Game.hpp  Hierachy.cpp  Hierachy.h  Hierachy.hpp  ImGui_Implementation.h  Inspector.cpp  Inspector.hpp  Preview.cpp  Preview.hpp  Profiler.cpp  Profiler.hpp  Project.cpp  Project.h  SceneView.cpp  SceneView.h  TextEditor.h  ViewPoint.cpp  ViewPoint.h
src/Editor/UI/WidgetBase/: Widget.cpp  Widget.h
src/Editor/UI/Widgets/: Console.cpp  Console.h  DemoMenu.cpp  DemoMenu.h  Viewport.cpp  Widget.cpp  Widget.h
src/Editor/UIOld/: ButtonColorPicker.cpp  EditorHelper.h  ImGui_Implementation.cpp
src/Editor/UIOld/Widgets/: AssetViewer.cpp  DemoMenu.hd.h  Viewport.h
src/Editor/Utility/: Selection.cpp  Selection.hpp
src/Editor/imgui/: Main0.cpp  imgui_demo.cpp  imgui_draw.cpp
src/Editor/opengl/: Main1.cpp  imgui.cpp  imgui_demo.cpp  imgui_impl_glfw_gl3.cpp
src/Engine/: CMakeLists.txt  CmakeLists.txt  Makefile  cmake_install.cmake
src/Engine/3Part/Box2D/: CMakeLists.txt
src/Engine/Core/: Context.cpp  Context.h  Engine.cpp  Engine.h  EngineDefs.h  EventSystem.h  GUIDGenerator.cpp  GUIDGenerator.h  GameObject.cpp  GameObject.hpp  Log.h  Settings.cpp  Settings.h  SmartPtr.h  Stopwatch.cpp  Stopwatch.h  SubSystem.h  Timer.cpp  Timer.h  Transform.cpp  Transform.hpp
src/Engine/Core/Log/: ILogger.h  Log.cpp  Log.h
src/Engine/Core/Math/: BoundingBox.cpp  BoundingBox.h  Determinant.h  MathFunctions.hpp  MathHelper.h  Matrix.cpp  Matrix.h  Quaternion.cpp  Quaternion.h  Radian.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
src/Engine/FileSystem/: FileSystem.cpp  FileSystem.h
src/Engine/Imgui/: OpenGLmain.cpp
src/Engine/Log/: ILogger.h  Log.cpp  Log.h
src/Engine/Logging/: Log.cpp
src/Engine/Lua/: CmakeLists.txt
src/Engine/Lua/src/: lauxlib.c  ldblib.c  ldebug.c  ldebug.h  ldo.c  ldump.c  lfunc.h  lgc.c  llex.c  llex.h  lmathlib.c  lmem.h  lobject.h  lopcodes.h  loslib.c  lparser.c  lparser.h  lprefix.h  lstring.c  lstring.h  lstrlib.c  ltable.h  lua.c  lua.h  luac.c  lzio.c
src/Engine/Math/: Matrix.cpp  Matrix.h  Quaternion.cpp  Quaternion.h  Radian.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp
src/Engine/Model/: model.cpp
src/Engine/Plantform/: readme.txt
src/Engine/Plantform/File/: FileSystem.cpp  FileSystem.h
src/Engine/Plantform/FileSystem/: FileSystem.cpp  FileSystem.h
src/Engine/Plantform/IO/: FileStream.h
src/Engine/Plantform/Net/: readme.txt
src/Engine/Plantform/RHI/: RHI_CommandList.h  RHI_Device.cpp  RHI_IndexBuffer.h  RHI_Object.h  RHI_Pipeline.h  RHI_RasterizerState.h  RHI_Shader.h  RHI_SwapChain.h  RHI_Texture.cpp  RHI_Texture.h  RHI_TextureCube.h  RHI_Vertex.h  RHI_Viewport.h  readme.txt
src/Engine/Plantform/Time/: Timer.cpp  Timer.h
src/Engine/Plantform/Windows/: IWindows.cpp  IWindows.h  Widget.cpp  Widget.h  readme.txt
src/Engine/RHI/: RHI_BlendState.h  RHI_ConstantBuffer.h  RHI_Definition.h  RHI_DepthStencilState.h  RHI_Device.cpp  RHI_Device.h  RHI_Implementation.h  RHI_InputLayout.h  RHI_Object.h  RHI_RasterizerState.h  RHI_Sampler.h  RHI_Shader.cpp  RHI_Shader.h  RHI_Texture.cpp  RHI_Texture.h  RHI_Texture2D.h  RHI_TextureCube.h  RHI_VertexBuffer.h  RHI_Viewport.h
src/Engine/RHI/D3D11/: D3D11_Common.h  D3D11_ConstantBuffer.cpp  D3D11_DepthStencilState.cpp  D3D11_Device.cpp  D3D11_IndexBuffer.cpp  D3D11_Sampler.cpp  D3D11_Shader.cpp  D3D11_VertexBuffer.cpp
src/Engine/RHI/Vulkan/: Vulkan_Common.h  Vulkan_Device.cpp  Vulkan_IndexBuffer.cpp  Vulkan_InputLayout.cpp  Vulkan_Pipeline.cpp  Vulkan_RasterizerState.cpp  Vulkan_Texture2D.cpp  Vulkan_TextureCube.cpp  Vulkan_VertexBuffer.cpp
src/Engine/Rendering/: Camera.cpp  Camera.hpp  Color.hpp  DepthShader.hpp  GouraudShader.hpp  IShader.hpp  Light.cpp  Light.hpp  Mesh.hpp  Model.hpp  Primitive.hpp  Shader.hpp  SoftGL.cpp  SoftGL.hpp  SoftRender.hpp  TMColor.hpp  Texture.cpp  Texture.hpp  Vertex.hpp
src/Engine/Rendering/OpenGL/: OpenGLFunctions.hpp  OpenGLMesh.hpp  OpenGLModel.hpp  OpenGLShader.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp  OpenGLVertex.cpp  OpenGLVertex.hpp  readme.txt
src/Engine/Rendering/RHI/: ILight.hpp  IMesh.hpp  IModel.hpp  IShader.hpp  ITexture.hpp  IVertex.hpp
src/Engine/Rendering/SoftRending/: DepthShader.hpp  GouraudShader.hpp  Primitive.hpp  SoftGL.cpp  SoftGL.hpp  SoftRender.hpp
src/Engine/Rendering/Vulkan/: readme.txt
src/Engine/Resource/: IResource.cpp  IResource.h  readme.txt
src/Engine/Scene/: Scene.cpp  Scene.hpp
src/Engine/SceneManager/: Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp
src/Engine/Threading/: Threading.cpp  Threading.h
src/Engine/UI/Widgets/: Console.cpp  (+2 more)
src/Engine/unkown/: Editor.h  EditorHelper.h  Widget.h  Widget_Scene.cpp
src/Tools/: CMakeLists.txt
src/Tools/FileFilter/: CMakeLists.txt
src/Tools/FileReader/: CMakeLists.txt
src/Tools/algorithm/: CMakeLists.txt
src/Tools/example/: CMakeLists.txt
(+813 files in other folders)
